--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>my</h1>
 <a href="go.html">go</a>
 <br>
-<a href="ts">go</a>
+<a href="ts">ts</a>
 <br>
-<a href="ts/ab.html">go</a>
+<a href="ts/ab.html">ts-ab</a>
